# notepad-plus-plus

./: .gitignore  CMakeLists.txt
PowerEditor/: CMakeLists.txt
scintilla/: CMakeLists.txt
