cmake_minimum_required(VERSION 3.4)

project(Notepad++ VERSION 7.5.3)


find_package(Boost COMPONENTS regex REQUIRED)

set(scintilla_PUBLIC_HEADERS
    scintilla/include/BoostRegexSearch.h
    scintilla/include/ILexer.h
    scintilla/include/SciLexer.h
    scintilla/include/Scintilla.h
    )

set(scintilla_BOOSTREGEX_SOURCES
    scintilla/boostregex/getboostver.cpp
    scintilla/boostregex/BoostRegExSearch.cxx
    scintilla/boostregex/UTF8DocumentIterator.cxx
    scintilla/boostregex/AnsiDocumentIterator.h
    scintilla/boostregex/UTF8DocumentIterator.h
    )

set(scintilla_LEXERS_SOURCES
    scintilla/lexers/LexA68k.cxx
    scintilla/lexers/LexAbaqus.cxx
    scintilla/lexers/LexAda.cxx
    scintilla/lexers/LexAPDL.cxx
    scintilla/lexers/LexAsm.cxx
    scintilla/lexers/LexAsn1.cxx
    scintilla/lexers/LexASY.cxx
    scintilla/lexers/LexAU3.cxx
    scintilla/lexers/LexAVE.cxx
    scintilla/lexers/LexAVS.cxx
    scintilla/lexers/LexBaan.cxx
    scintilla/lexers/LexBash.cxx
    scintilla/lexers/LexBasic.cxx
    scintilla/lexers/LexBibTeX.cxx
    scintilla/lexers/LexBullant.cxx
    scintilla/lexers/LexCaml.cxx
    scintilla/lexers/LexCLW.cxx
    scintilla/lexers/LexCmake.cxx
    scintilla/lexers/LexCOBOL.cxx
    scintilla/lexers/LexCoffeeScript.cxx
    scintilla/lexers/LexConf.cxx
    scintilla/lexers/LexCPP.cxx
    scintilla/lexers/LexCrontab.cxx
    scintilla/lexers/LexCsound.cxx
    scintilla/lexers/LexCSS.cxx
    scintilla/lexers/LexD.cxx
    scintilla/lexers/LexDMAP.cxx
    scintilla/lexers/LexDMIS.cxx
    scintilla/lexers/LexECL.cxx
    scintilla/lexers/LexEiffel.cxx
    scintilla/lexers/LexErlang.cxx
    scintilla/lexers/LexEScript.cxx
    scintilla/lexers/LexFlagship.cxx
    scintilla/lexers/LexForth.cxx
    scintilla/lexers/LexFortran.cxx
    scintilla/lexers/LexGAP.cxx
    scintilla/lexers/LexGui4Cli.cxx
    scintilla/lexers/LexHaskell.cxx
    scintilla/lexers/LexHex.cxx
    scintilla/lexers/LexHTML.cxx
    scintilla/lexers/LexInno.cxx
    scintilla/lexers/LexKix.cxx
    scintilla/lexers/LexKVIrc.cxx
    scintilla/lexers/LexLaTeX.cxx
    scintilla/lexers/LexLisp.cxx
    scintilla/lexers/LexLout.cxx
    scintilla/lexers/LexLua.cxx
    scintilla/lexers/LexMagik.cxx
    scintilla/lexers/LexMarkdown.cxx
    scintilla/lexers/LexMatlab.cxx
    scintilla/lexers/LexMetapost.cxx
    scintilla/lexers/LexMMIXAL.cxx
    scintilla/lexers/LexModula.cxx
    scintilla/lexers/LexMPT.cxx
    scintilla/lexers/LexMSSQL.cxx
    scintilla/lexers/LexMySQL.cxx
    scintilla/lexers/LexNimrod.cxx
    scintilla/lexers/LexNsis.cxx
    scintilla/lexers/LexObjC.cxx
    scintilla/lexers/LexOpal.cxx
    scintilla/lexers/LexOScript.cxx
    scintilla/lexers/LexOthers.cxx
    scintilla/lexers/LexPascal.cxx
    scintilla/lexers/LexPB.cxx
    scintilla/lexers/LexPerl.cxx
    scintilla/lexers/LexPLM.cxx
    scintilla/lexers/LexPO.cxx
    scintilla/lexers/LexPOV.cxx
    scintilla/lexers/LexPowerPro.cxx
    scintilla/lexers/LexPowerShell.cxx
    scintilla/lexers/LexProgress.cxx
    scintilla/lexers/LexPS.cxx
    scintilla/lexers/LexPython.cxx
    scintilla/lexers/LexR.cxx
    scintilla/lexers/LexRebol.cxx
    scintilla/lexers/LexRegistry.cxx
    scintilla/lexers/LexRuby.cxx
    scintilla/lexers/LexRust.cxx
    scintilla/lexers/LexScriptol.cxx
    scintilla/lexers/LexSearchResult.cxx
    scintilla/lexers/LexSmalltalk.cxx
    scintilla/lexers/LexSML.cxx
    scintilla/lexers/LexSorcus.cxx
    scintilla/lexers/LexSpecman.cxx
    scintilla/lexers/LexSpice.cxx
    scintilla/lexers/LexSQL.cxx
    scintilla/lexers/LexSTTXT.cxx
    scintilla/lexers/LexTACL.cxx
    scintilla/lexers/LexTADS3.cxx
    scintilla/lexers/LexTAL.cxx
    scintilla/lexers/LexTCL.cxx
    scintilla/lexers/LexTCMD.cxx
    scintilla/lexers/LexTeX.cxx
    scintilla/lexers/LexTxt2tags.cxx
    scintilla/lexers/LexUser.cxx
    scintilla/lexers/LexVB.cxx
    scintilla/lexers/LexVerilog.cxx
    scintilla/lexers/LexVHDL.cxx
    scintilla/lexers/LexVisualProlog.cxx
    scintilla/lexers/LexYAML.cxx
    )

set(scintilla_LEXLIB_SOURCES
    scintilla/lexlib/Accessor.cxx
    scintilla/lexlib/CharacterCategory.cxx
    scintilla/lexlib/CharacterSet.cxx
    scintilla/lexlib/LexerBase.cxx
    scintilla/lexlib/LexerModule.cxx
    scintilla/lexlib/LexerNoExceptions.cxx
    scintilla/lexlib/LexerSimple.cxx
    scintilla/lexlib/PropSetSimple.cxx
    scintilla/lexlib/StyleContext.cxx
    scintilla/lexlib/WordList.cxx
    scintilla/lexlib/Accessor.h
    scintilla/lexlib/CharacterCategory.h
    scintilla/lexlib/CharacterSet.h
    scintilla/lexlib/LexAccessor.h
    scintilla/lexlib/LexerBase.h
    scintilla/lexlib/LexerModule.h
    scintilla/lexlib/LexerNoExceptions.h
    scintilla/lexlib/LexerSimple.h
    scintilla/lexlib/OptionSet.h
    scintilla/lexlib/PropSetSimple.h
    scintilla/lexlib/SparseState.h
    scintilla/lexlib/StringCopy.h
    scintilla/lexlib/StyleContext.h
    scintilla/lexlib/SubStyles.h
    scintilla/lexlib/WordList.h
    )

set(scintilla_SOURCES
    scintilla/src/AutoComplete.cxx
    scintilla/src/CallTip.cxx
    scintilla/src/CaseConvert.cxx
    scintilla/src/CaseFolder.cxx
    scintilla/src/Catalogue.cxx
    scintilla/src/CellBuffer.cxx
    scintilla/src/CharClassify.cxx
    scintilla/src/ContractionState.cxx
    scintilla/src/Decoration.cxx
    scintilla/src/Document.cxx
    scintilla/src/EditModel.cxx
    scintilla/src/Editor.cxx
    scintilla/src/EditView.cxx
    scintilla/src/ExternalLexer.cxx
    scintilla/src/Indicator.cxx
    scintilla/src/KeyMap.cxx
    scintilla/src/LineMarker.cxx
    scintilla/src/MarginView.cxx
    scintilla/src/PerLine.cxx
    scintilla/src/PositionCache.cxx
    scintilla/src/RESearch.cxx
    scintilla/src/RunStyles.cxx
    scintilla/src/ScintillaBase.cxx
    scintilla/src/Selection.cxx
    scintilla/src/Style.cxx
    scintilla/src/UniConversion.cxx
    scintilla/src/ViewStyle.cxx
    scintilla/src/XPM.cxx
    scintilla/src/AutoComplete.h
    scintilla/src/CallTip.h
    scintilla/src/CaseConvert.h
    scintilla/src/CaseFolder.h
    scintilla/src/Catalogue.h
    scintilla/src/CellBuffer.h
    scintilla/src/CharClassify.h
    scintilla/src/ContractionState.h
    scintilla/src/Decoration.h
    scintilla/src/Document.h
    scintilla/src/EditModel.h
    scintilla/src/Editor.h
    scintilla/src/EditView.h
    scintilla/src/ExternalLexer.h
    scintilla/src/FontQuality.h
    scintilla/src/Indicator.h
    scintilla/src/KeyMap.h
    scintilla/src/LineMarker.h
    scintilla/src/MarginView.h
    scintilla/src/Partitioning.h
    scintilla/src/PerLine.h
    scintilla/src/PositionCache.h
    scintilla/src/RESearch.h
    scintilla/src/RunStyles.h
    scintilla/src/ScintillaBase.h
    scintilla/src/Selection.h
    scintilla/src/SplitVector.h
    scintilla/src/Style.h
    scintilla/src/UnicodeFromUTF8.h
    scintilla/src/UniConversion.h
    scintilla/src/ViewStyle.h
    scintilla/src/XPM.h
    )

set(scintilla_WIN32_SOURCES
    scintilla/win32/HanjaDic.cxx
    scintilla/win32/PlatWin.cxx
    scintilla/win32/ScintillaWin.cxx
    scintilla/win32/HanjaDic.h
    scintilla/win32/PlatWin.h
    scintilla/win32/Scintilla.def
    scintilla/win32/ScintRes.rc
    )


set(npp_SOURCES
    PowerEditor/src/EncodingMapper.cpp
    PowerEditor/src/lastRecentFileList.cpp
    PowerEditor/src/lesDlgs.cpp
    PowerEditor/src/localization.cpp
    PowerEditor/src/Notepad_plus.cpp
    PowerEditor/src/Notepad_plus_Window.cpp
    PowerEditor/src/NppBigSwitch.cpp
    PowerEditor/src/NppCommands.cpp
    PowerEditor/src/NppIO.cpp
    PowerEditor/src/NppNotification.cpp
    PowerEditor/src/Parameters.cpp
    PowerEditor/src/UniConversion.cpp
    PowerEditor/src/Utf8_16.cpp
    PowerEditor/src/winmain.cpp
    PowerEditor/src/clipboardFormats.h
    PowerEditor/src/dpiManager.h
    PowerEditor/src/EncodingMapper.h
    PowerEditor/src/keys.h
    PowerEditor/src/lastRecentFileList.h
    PowerEditor/src/lesDlgs.h
    PowerEditor/src/localization.h
    PowerEditor/src/localizationString.h
    PowerEditor/src/menuCmdID.h
    PowerEditor/src/Notepad_plus.h
    PowerEditor/src/Notepad_plus_Window.h
    PowerEditor/src/Parameters.h
    PowerEditor/src/resource.h
    PowerEditor/src/rgba_icons.h
    PowerEditor/src/StaticControl.h
    PowerEditor/src/UniConversion.h
    PowerEditor/src/Utf8.h
    PowerEditor/src/Utf8_16.h
    PowerEditor/src/dpiAware.manifest
    PowerEditor/src/notepad++.exe.manifest
    PowerEditor/src/Notepad_plus.rc
    )

set(npp_WinControls_SOURCES
    PowerEditor/src/WinControls/Window.h
    PowerEditor/src/WinControls/WindowInterface.h
    PowerEditor/src/WinControls/AboutDlg/AboutDlg.cpp
    PowerEditor/src/WinControls/AboutDlg/URLCtrl.cpp
    PowerEditor/src/WinControls/AboutDlg/AboutDlg.h
    PowerEditor/src/WinControls/AboutDlg/URLCtrl.h
    PowerEditor/src/WinControls/AnsiCharPanel/ansiCharPanel.cpp
    PowerEditor/src/WinControls/AnsiCharPanel/asciiListView.cpp
    PowerEditor/src/WinControls/AnsiCharPanel/ListView.cpp
    PowerEditor/src/WinControls/AnsiCharPanel/ansiCharPanel.h
    PowerEditor/src/WinControls/AnsiCharPanel/ansiCharPanel_rc.h
    PowerEditor/src/WinControls/AnsiCharPanel/asciiListView.h
    PowerEditor/src/WinControls/AnsiCharPanel/ListView.h
    PowerEditor/src/WinControls/AnsiCharPanel/ansiCharPanel.rc
    PowerEditor/src/WinControls/ClipboardHistory/clipboardHistoryPanel.cpp
    PowerEditor/src/WinControls/ClipboardHistory/clipboardHistoryPanel.h
    PowerEditor/src/WinControls/ClipboardHistory/clipboardHistoryPanel_rc.h
    PowerEditor/src/WinControls/ClipboardHistory/clipboardHistoryPanel.rc
    PowerEditor/src/WinControls/ColourPicker/ColourPicker.cpp
    PowerEditor/src/WinControls/ColourPicker/ColourPopup.cpp
    PowerEditor/src/WinControls/ColourPicker/WordStyleDlg.cpp
    PowerEditor/src/WinControls/ColourPicker/ColourPicker.h
    PowerEditor/src/WinControls/ColourPicker/ColourPopup.h
    PowerEditor/src/WinControls/ColourPicker/ColourPopupResource.h
    PowerEditor/src/WinControls/ColourPicker/WordStyleDlg.h
    PowerEditor/src/WinControls/ColourPicker/WordStyleDlgRes.h
    PowerEditor/src/WinControls/ColourPicker/ColourPopup.rc
    PowerEditor/src/WinControls/ColourPicker/WordStyleDlg.rc
    PowerEditor/src/WinControls/ContextMenu/ContextMenu.cpp
    PowerEditor/src/WinControls/ContextMenu/ContextMenu.h
    PowerEditor/src/WinControls/DockingWnd/DockingCont.cpp
    PowerEditor/src/WinControls/DockingWnd/DockingManager.cpp
    PowerEditor/src/WinControls/DockingWnd/DockingSplitter.cpp
    PowerEditor/src/WinControls/DockingWnd/Gripper.cpp
    PowerEditor/src/WinControls/DockingWnd/Docking.h
    PowerEditor/src/WinControls/DockingWnd/DockingCont.h
    PowerEditor/src/WinControls/DockingWnd/DockingDlgInterface.h
    PowerEditor/src/WinControls/DockingWnd/DockingManager.h
    PowerEditor/src/WinControls/DockingWnd/dockingResource.h
    PowerEditor/src/WinControls/DockingWnd/DockingSplitter.h
    PowerEditor/src/WinControls/DockingWnd/Gripper.h
    PowerEditor/src/WinControls/DockingWnd/DockingGUIWidget.rc
    PowerEditor/src/WinControls/DocumentMap/documentMap.cpp
    PowerEditor/src/WinControls/DocumentMap/documentSnapshot.cpp
    PowerEditor/src/WinControls/DocumentMap/documentMap.h
    PowerEditor/src/WinControls/DocumentMap/documentMap_rc.h
    PowerEditor/src/WinControls/DocumentMap/documentSnapshot.h
    PowerEditor/src/WinControls/DocumentMap/documentSnapshot_rc.h
    PowerEditor/src/WinControls/DocumentMap/documentMap.rc
    PowerEditor/src/WinControls/DocumentMap/documentSnapshot.rc
    PowerEditor/src/WinControls/FileBrowser/fileBrowser.cpp
    PowerEditor/src/WinControls/FileBrowser/fileBrowser.h
    PowerEditor/src/WinControls/FileBrowser/fileBrowser_rc.h
    PowerEditor/src/WinControls/FileBrowser/fileBrowser.rc
    PowerEditor/src/WinControls/FindCharsInRange/FindCharsInRange.cpp
    PowerEditor/src/WinControls/FindCharsInRange/FindCharsInRange.h
    PowerEditor/src/WinControls/FindCharsInRange/findCharsInRange_rc.h
    PowerEditor/src/WinControls/FindCharsInRange/findCharsInRange.rc
    PowerEditor/src/WinControls/FunctionList/functionListPanel.cpp
    PowerEditor/src/WinControls/FunctionList/functionParser.cpp
    PowerEditor/src/WinControls/FunctionList/functionListPanel.h
    PowerEditor/src/WinControls/FunctionList/functionListPanel_rc.h
    PowerEditor/src/WinControls/FunctionList/functionParser.h
    PowerEditor/src/WinControls/FunctionList/functionListPanel.rc
    PowerEditor/src/WinControls/Grid/BabyGrid.cpp
    PowerEditor/src/WinControls/Grid/BabyGridWrapper.cpp
    PowerEditor/src/WinControls/Grid/ShortcutMapper.cpp
    PowerEditor/src/WinControls/Grid/BabyGrid.h
    PowerEditor/src/WinControls/Grid/BabyGridWrapper.h
    PowerEditor/src/WinControls/Grid/ShortcutMapper.h
    PowerEditor/src/WinControls/Grid/ShortcutMapper_rc.h
    PowerEditor/src/WinControls/Grid/ShortcutMapper.rc
    PowerEditor/src/WinControls/ImageListSet/ImageListSet.cpp
    PowerEditor/src/WinControls/ImageListSet/ImageListSet.h
    PowerEditor/src/WinControls/OpenSaveFileDialog/FileDialog.cpp
    PowerEditor/src/WinControls/OpenSaveFileDialog/FileDialog.h
    PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.cpp
    PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.h
    PowerEditor/src/WinControls/PluginsAdmin/pluginsAdminRes.h
    PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
    PowerEditor/src/WinControls/Preference/preferenceDlg.cpp
    PowerEditor/src/WinControls/Preference/preference_rc.h
    PowerEditor/src/WinControls/Preference/preferenceDlg.h
    PowerEditor/src/WinControls/Preference/preference.rc
    PowerEditor/src/WinControls/ProjectPanel/ProjectPanel.cpp
    PowerEditor/src/WinControls/ProjectPanel/TreeView.cpp
    PowerEditor/src/WinControls/ProjectPanel/ProjectPanel.h
    PowerEditor/src/WinControls/ProjectPanel/ProjectPanel_rc.h
    PowerEditor/src/WinControls/ProjectPanel/TreeView.h
    PowerEditor/src/WinControls/ProjectPanel/ProjectPanel.rc
    PowerEditor/src/WinControls/ReadDirectoryChanges/ReadDirectoryChanges.cpp
    PowerEditor/src/WinControls/ReadDirectoryChanges/ReadDirectoryChangesPrivate.cpp
    PowerEditor/src/WinControls/ReadDirectoryChanges/ReadDirectoryChanges.h
    PowerEditor/src/WinControls/ReadDirectoryChanges/ReadDirectoryChangesPrivate.h
    PowerEditor/src/WinControls/ReadDirectoryChanges/targetver.h
    PowerEditor/src/WinControls/ReadDirectoryChanges/ThreadSafeQueue.h
    PowerEditor/src/WinControls/shortcut/RunMacroDlg.cpp
    PowerEditor/src/WinControls/shortcut/shortcut.cpp
    PowerEditor/src/WinControls/shortcut/RunMacroDlg.h
    PowerEditor/src/WinControls/shortcut/RunMacroDlg_rc.h
    PowerEditor/src/WinControls/shortcut/shortcut.h
    PowerEditor/src/WinControls/shortcut/shortcutRc.h
    PowerEditor/src/WinControls/shortcut/RunMacroDlg.rc
    PowerEditor/src/WinControls/shortcut/shortcut.rc
    PowerEditor/src/WinControls/SplitterContainer/Splitter.cpp
    PowerEditor/src/WinControls/SplitterContainer/SplitterContainer.cpp
    PowerEditor/src/WinControls/SplitterContainer/Splitter.h
    PowerEditor/src/WinControls/SplitterContainer/SplitterContainer.h
    PowerEditor/src/WinControls/StaticDialog/RunDlg/RunDlg.cpp
    PowerEditor/src/WinControls/StaticDialog/RunDlg/RunDlg.h
    PowerEditor/src/WinControls/StaticDialog/RunDlg/RunDlg_rc.h
    PowerEditor/src/WinControls/StaticDialog/RunDlg/RunDlg.rc
    PowerEditor/src/WinControls/StaticDialog/StaticDialog.cpp
    PowerEditor/src/WinControls/StaticDialog/StaticDialog.h
    PowerEditor/src/WinControls/StatusBar/StatusBar.cpp
    PowerEditor/src/WinControls/StatusBar/StatusBar.h
    PowerEditor/src/WinControls/TabBar/ControlsTab.cpp
    PowerEditor/src/WinControls/TabBar/TabBar.cpp
    PowerEditor/src/WinControls/TabBar/ControlsTab.h
    PowerEditor/src/WinControls/TabBar/TabBar.h
    PowerEditor/src/WinControls/TaskList/TaskList.cpp
    PowerEditor/src/WinControls/TaskList/TaskListDlg.cpp
    PowerEditor/src/WinControls/TaskList/TaskList.h
    PowerEditor/src/WinControls/TaskList/TaskListDlg.h
    PowerEditor/src/WinControls/TaskList/TaskListDlg_rc.h
    PowerEditor/src/WinControls/TaskList/TaskListDlg.rc
    PowerEditor/src/WinControls/ToolBar/ToolBar.cpp
    PowerEditor/src/WinControls/ToolBar/ToolBar.h
    PowerEditor/src/WinControls/ToolTip/ToolTip.cpp
    PowerEditor/src/WinControls/ToolTip/ToolTip.h
    PowerEditor/src/WinControls/TrayIcon/trayIconControler.cpp
    PowerEditor/src/WinControls/TrayIcon/trayIconControler.h
    PowerEditor/src/WinControls/TreeView/TreeView.cpp
    PowerEditor/src/WinControls/TreeView/TreeView.h
    PowerEditor/src/WinControls/VerticalFileSwitcher/VerticalFileSwitcher.cpp
    PowerEditor/src/WinControls/VerticalFileSwitcher/VerticalFileSwitcherListView.cpp
    PowerEditor/src/WinControls/VerticalFileSwitcher/VerticalFileSwitcher.h
    PowerEditor/src/WinControls/VerticalFileSwitcher/VerticalFileSwitcher_rc.h
    PowerEditor/src/WinControls/VerticalFileSwitcher/VerticalFileSwitcherListView.h
    PowerEditor/src/WinControls/VerticalFileSwitcher/VerticalFileSwitcher.rc
    PowerEditor/src/WinControls/WindowsDlg/SizeableDlg.cpp
    PowerEditor/src/WinControls/WindowsDlg/WindowsDlg.cpp
    PowerEditor/src/WinControls/WindowsDlg/WinMgr.cpp
    PowerEditor/src/WinControls/WindowsDlg/WinRect.cpp
    PowerEditor/src/WinControls/WindowsDlg/SizeableDlg.h
    PowerEditor/src/WinControls/WindowsDlg/WindowsDlg.h
    PowerEditor/src/WinControls/WindowsDlg/WindowsDlgRc.h
    PowerEditor/src/WinControls/WindowsDlg/WinMgr.h
    PowerEditor/src/WinControls/WindowsDlg/WindowsDlg.rc
    )

set(npp_uchardet_SOURCES
    PowerEditor/src/uchardet/CharDistribution.cpp
    PowerEditor/src/uchardet/JpCntx.cpp
    PowerEditor/src/uchardet/LangBulgarianModel.cpp
    PowerEditor/src/uchardet/LangCyrillicModel.cpp
    PowerEditor/src/uchardet/LangGreekModel.cpp
    PowerEditor/src/uchardet/LangHebrewModel.cpp
    PowerEditor/src/uchardet/LangHungarianModel.cpp
    PowerEditor/src/uchardet/LangThaiModel.cpp
    PowerEditor/src/uchardet/nsBig5Prober.cpp
    PowerEditor/src/uchardet/nsCharSetProber.cpp
    PowerEditor/src/uchardet/nsEscCharsetProber.cpp
    PowerEditor/src/uchardet/nsEscSM.cpp
    PowerEditor/src/uchardet/nsEUCJPProber.cpp
    PowerEditor/src/uchardet/nsEUCKRProber.cpp
    PowerEditor/src/uchardet/nsEUCTWProber.cpp
    PowerEditor/src/uchardet/nsGB2312Prober.cpp
    PowerEditor/src/uchardet/nsHebrewProber.cpp
    PowerEditor/src/uchardet/nsLatin1Prober.cpp
    PowerEditor/src/uchardet/nsMBCSGroupProber.cpp
    PowerEditor/src/uchardet/nsMBCSSM.cpp
    PowerEditor/src/uchardet/nsSBCharSetProber.cpp
    PowerEditor/src/uchardet/nsSBCSGroupProber.cpp
    PowerEditor/src/uchardet/nsSJISProber.cpp
    PowerEditor/src/uchardet/nsUniversalDetector.cpp
    PowerEditor/src/uchardet/nsUTF8Prober.cpp
    PowerEditor/src/uchardet/uchardet.cpp
    PowerEditor/src/uchardet/CharDistribution.h
    PowerEditor/src/uchardet/JpCntx.h
    PowerEditor/src/uchardet/nsBig5Prober.h
    PowerEditor/src/uchardet/nsCharSetProber.h
    PowerEditor/src/uchardet/nsCodingStateMachine.h
    PowerEditor/src/uchardet/nscore.h
    PowerEditor/src/uchardet/nsEscCharsetProber.h
    PowerEditor/src/uchardet/nsEUCJPProber.h
    PowerEditor/src/uchardet/nsEUCKRProber.h
    PowerEditor/src/uchardet/nsEUCTWProber.h
    PowerEditor/src/uchardet/nsGB2312Prober.h
    PowerEditor/src/uchardet/nsHebrewProber.h
    PowerEditor/src/uchardet/nsLatin1Prober.h
    PowerEditor/src/uchardet/nsMBCSGroupProber.h
    PowerEditor/src/uchardet/nsPkgInt.h
    PowerEditor/src/uchardet/nsSBCharSetProber.h
    PowerEditor/src/uchardet/nsSBCSGroupProber.h
    PowerEditor/src/uchardet/nsSJISProber.h
    PowerEditor/src/uchardet/nsUniversalDetector.h
    PowerEditor/src/uchardet/nsUTF8Prober.h
    PowerEditor/src/uchardet/prmem.h
    PowerEditor/src/uchardet/uchardet.h
    )

set(npp_ScintillaComponent_SOURCES
    PowerEditor/src/ScitillaComponent/AutoCompletion.cpp
    PowerEditor/src/ScitillaComponent/Buffer.cpp
    PowerEditor/src/ScitillaComponent/columnEditor.cpp
    PowerEditor/src/ScitillaComponent/DocTabView.cpp
    PowerEditor/src/ScitillaComponent/FindReplaceDlg.cpp
    PowerEditor/src/ScitillaComponent/FunctionCallTip.cpp
    PowerEditor/src/ScitillaComponent/GoToLineDlg.cpp
    PowerEditor/src/ScitillaComponent/Printer.cpp
    PowerEditor/src/ScitillaComponent/ScintillaCtrls.cpp
    PowerEditor/src/ScitillaComponent/ScintillaEditView.cpp
    PowerEditor/src/ScitillaComponent/SmartHighlighter.cpp
    PowerEditor/src/ScitillaComponent/UserDefineDialog.cpp
    PowerEditor/src/ScitillaComponent/xmlMatchedTagsHighlighter.cpp
    PowerEditor/src/ScitillaComponent/AutoCompletion.h
    PowerEditor/src/ScitillaComponent/Buffer.h
    PowerEditor/src/ScitillaComponent/colors.h
    PowerEditor/src/ScitillaComponent/columnEditor.h
    PowerEditor/src/ScitillaComponent/columnEditor_rc.h
    PowerEditor/src/ScitillaComponent/DocTabView.h
    PowerEditor/src/ScitillaComponent/FindReplaceDlg.h
    PowerEditor/src/ScitillaComponent/FindReplaceDlg_rc.h
    PowerEditor/src/ScitillaComponent/FunctionCallTip.h
    PowerEditor/src/ScitillaComponent/GoToLineDlg.h
    PowerEditor/src/ScitillaComponent/Printer.h
    PowerEditor/src/ScitillaComponent/ScintillaCtrls.h
    PowerEditor/src/ScitillaComponent/ScintillaEditView.h
    PowerEditor/src/ScitillaComponent/ScintillaRef.h
    PowerEditor/src/ScitillaComponent/SmartHighlighter.h
    PowerEditor/src/ScitillaComponent/UserDefineDialog.h
    PowerEditor/src/ScitillaComponent/UserDefineLangReference.h
    PowerEditor/src/ScitillaComponent/UserDefineResource.h
    PowerEditor/src/ScitillaComponent/xmlMatchedTagsHighlighter.h
    PowerEditor/src/ScitillaComponent/columnEditor.rc
    PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
    PowerEditor/src/ScitillaComponent/UserDefineDialog.rc
    )

set(npp_TinyXml_SOURCES
    PowerEditor/src/TinyXml/tinyXmlA/tinystrA.cpp
    PowerEditor/src/TinyXml/tinyXmlA/tinyxmlA.cpp
    PowerEditor/src/TinyXml/tinyXmlA/tinyxmlerrorA.cpp
    PowerEditor/src/TinyXml/tinyXmlA/tinyxmlparserA.cpp
    PowerEditor/src/TinyXml/tinyXmlA/tinystrA.h
    PowerEditor/src/TinyXml/tinyXmlA/tinyxmlA.h
    PowerEditor/src/TinyXml/tinystr.cpp
    PowerEditor/src/TinyXml/tinyxml.cpp
    PowerEditor/src/TinyXml/tinyxmlerror.cpp
    PowerEditor/src/TinyXml/tinyxmlparser.cpp
    PowerEditor/src/TinyXml/tinystr.h
    PowerEditor/src/TinyXml/tinyxml.h
    )

set(npp_MISC_SOURCES
    PowerEditor/src/MISC/Common/Common.cpp
    PowerEditor/src/MISC/Common/LongRunningOperation.cpp
    PowerEditor/src/MISC/Common/mutex.cpp
    PowerEditor/src/MISC/Common/verifySignedfile.cpp
    PowerEditor/src/MISC/Common/Common.h
    PowerEditor/src/MISC/Common/LongRunningOperation.h
    PowerEditor/src/MISC/Common/mutex.h
    PowerEditor/src/MISC/Common/Sorters.h
    PowerEditor/src/MISC/Common/verifySignedfile.h
    PowerEditor/src/MISC/Common/mutex.hxx
    PowerEditor/src/MISC/crc16/Crc16.h
    PowerEditor/src/MISC/Exception/MiniDumper.cpp
    PowerEditor/src/MISC/Exception/Win32Exception.cpp
    PowerEditor/src/MISC/Exception/MiniDumper.h
    PowerEditor/src/MISC/Exception/Win32Exception.h
    PowerEditor/src/MISC/md5/md5Dlgs.cpp
    PowerEditor/src/MISC/md5/md5.h
    PowerEditor/src/MISC/md5/md5Dlgs.h
    PowerEditor/src/MISC/md5/md5Dlgs_rc.h
    PowerEditor/src/MISC/md5/md5Dlgs.rc
    PowerEditor/src/MISC/PluginsManager/IDAllocator.cpp
    PowerEditor/src/MISC/PluginsManager/PluginsManager.cpp
    PowerEditor/src/MISC/PluginsManager/deprecatedSymbols.h
    PowerEditor/src/MISC/PluginsManager/IDAllocator.h
    PowerEditor/src/MISC/PluginsManager/Notepad_plus_msgs.h
    PowerEditor/src/MISC/PluginsManager/PluginInterface.h
    PowerEditor/src/MISC/PluginsManager/PluginsManager.h
    PowerEditor/src/MISC/Process/Processus.cpp
    PowerEditor/src/MISC/Process/Processus.h
    PowerEditor/src/MISC/RegExt/regExtDlg.cpp
    PowerEditor/src/MISC/RegExt/regExtDlg.h
    PowerEditor/src/MISC/RegExt/regExtDlgRc.h
    PowerEditor/src/MISC/RegExt/regExtDlg.rc
    PowerEditor/src/MISC/FileNameStringSplitter.h
    )

set(npp_json_SOURCES PowerEditor/src/json/json.hpp)


add_library(SciLexer SHARED
    ${scintilla_PUBLIC_HEADERS}
    ${scintilla_BOOSTREGEX_SOURCES}
    ${scintilla_LEXERS_SOURCES}
    ${scintilla_LEXLIB_SOURCES}
    ${scintilla_SOURCES}
    )
target_compile_definitions(SciLexer PRIVATE SCI_OWNREGEX)
if(MSVC)
    target_compile_definitions(SciLexer PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()
target_link_libraries(SciLexer PRIVATE Boost::regex)
if(WIN32)
    target_link_libraries(SciLexer PRIVATE imm32)
endif()
target_include_directories(SciLexer
    PUBLIC scintilla/include
    PRIVATE scintilla/lexlib;scintilla/src)
if(WIN32)
    target_sources(SciLexer PRIVATE ${scintilla_WIN32_SOURCES})
endif()


add_executable(notepad++ WIN32
    ${npp_SOURCES}
    ${npp_json_SOURCES}
    ${npp_WinControls_SOURCES}
    ${npp_uchardet_SOURCES}
    ${npp_ScintillaComponent_SOURCES}
    ${npp_TinyXml_SOURCES}
    ${npp_MISC_SOURCES}
    )
target_compile_definitions(notepad++
    PRIVATE
        UNICODE;_UNICODE;_USE_64BIT_TIME_T;TIXML_USE_STL;TIXMLA_USE_STL;
        _CRT_NONSTDC_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;
        _CRT_NON_CONFORMING_SWPRINTFS=1;_CRT_NON_CONFORMING_WCSTOK
        )
target_link_libraries(notepad++
    PUBLIC SciLexer
    PRIVATE comctl32;crypt32;dbghelp;wintrust;sensapi;version
    )
target_include_directories(notepad++
    PRIVATE
        PowerEditor/src
        PowerEditor/src/json
        PowerEditor/src/MISC
        PowerEditor/src/MISC/Common
        PowerEditor/src/MISC/crc16
        PowerEditor/src/MISC/Exception
        PowerEditor/src/MISC/md5
        PowerEditor/src/MISC/PluginsManager
        PowerEditor/src/MISC/Process
        PowerEditor/src/MISC/RegExt
        PowerEditor/src/ScitillaComponent
        PowerEditor/src/TinyXml
        PowerEditor/src/TinyXml/tinyXmlA
        PowerEditor/src/uchardet
        PowerEditor/src/WinControls
        PowerEditor/src/WinControls/AboutDlg
        PowerEditor/src/WinControls/AnsiCharPanel
        PowerEditor/src/WinControls/ClipboardHistory
        PowerEditor/src/WinControls/ColourPicker
        PowerEditor/src/WinControls/ContextMenu
        PowerEditor/src/WinControls/DockingWnd
        PowerEditor/src/WinControls/DocumentMap
        PowerEditor/src/WinControls/FileBrowser
        PowerEditor/src/WinControls/FindCharsInRange
        PowerEditor/src/WinControls/FunctionList
        PowerEditor/src/WinControls/Grid
        PowerEditor/src/WinControls/ImageListSet
        PowerEditor/src/WinControls/OpenSaveFileDialog
        PowerEditor/src/WinControls/PluginsAdmin
        PowerEditor/src/WinControls/Preference
        PowerEditor/src/WinControls/ProjectPanel
        PowerEditor/src/WinControls/ReadDirectoryChanges
        PowerEditor/src/WinControls/shortcut
        PowerEditor/src/WinControls/SplitterContainer
        PowerEditor/src/WinControls/StaticDialog
        PowerEditor/src/WinControls/StaticDialog/RunDlg
        PowerEditor/src/WinControls/StatusBar
        PowerEditor/src/WinControls/TabBar
        PowerEditor/src/WinControls/TaskList
        PowerEditor/src/WinControls/ToolBar
        PowerEditor/src/WinControls/ToolTip
        PowerEditor/src/WinControls/TrayIcon
        PowerEditor/src/WinControls/TreeView
        PowerEditor/src/WinControls/VerticalFileSwitcher
        PowerEditor/src/WinControls/WindowsDlg
        )
